--- a/contact.html
+++ b/contact.html
@@ -3,24 +3,25 @@ layout: page
 title: Say Hello
 permalink: /contact/
 ---
+Always happy to send a resume, larger/more specific portfolio, or aggressive podcast recommendation.
 
 <div class="py2">
   {% if site.ajaxify_contact_form %}
     <form class="form-stacked">
       <input type="text" name="email" class="field-light" placeholder="Email Address">
-      <textarea type="text" name="content" class="field-light" rows="5" placeholder="What would you like to say?"></textarea>
+      <textarea type="text" name="content" class="field-light" rows="5" placeholder="emojis accepted"></textarea>
       <input type="hidden" name="_subject" value="New submission!" />
       <input type="text" name="_gotcha" style="display:none" />
-      <button type='submit' class="button button-blue button-big mobile-block">Say Hello</button>
+      <button type='submit' class="button button-blue button-big mobile-block">*woosh*</button>
     </form>
   {% else %}
     <form action="https://formspree.io/allysonkatew@gmail.com" method="POST" class="form-stacked">
       <input type="text" name="email" class="field-light" placeholder="Email Address">
-      <textarea type="text" name="content" class="field-light" rows="5" placeholder="What would you like to say?"></textarea>
+      <textarea type="text" name="content" class="field-light" rows="5" placeholder="emojis accepted"></textarea>
       <input type="hidden" name="_next" value="{{ site.baseurl }}/thanks/" />
       <input type="hidden" name="_subject" value="New submission!" />
       <input type="text" name="_gotcha" style="display:none" />
-      <input type="submit" class="button button-blue button-big mobile-block" value="Say Hello">
+      <input type="submit" class="button button-blue button-big mobile-block" value="*woosh*">
     </form>
   {% endif %}
 </div>
