--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@ layout: default
 ---
 
 <h1 class="h1">
-Hi, I'm Allyson, a ux designer and front-end developer in Chicago. I'm most easily found on <a href="http://twitter.com/allysonkate">twitter</a> and via <a href="mailto:allysonkatew@gmail.com">electronic mail</a>.
+Hi, I'm Allyson, a digital designer in Chicago. I'm most easily found on <a href="http://twitter.com/allysonkate">twitter</a> and via <a href="mailto:allysonkatew@gmail.com">electronic mail</a>.
 </h1>
 <h1 class="h1">
 These days, you can find me designing at <a href="http://secondcity.com">The Second City</a>, coding with <a href="https://www.girldevelopit.com/chapters/chicago">Girl Develop It</a>, or hanging out with <a href="http://www.chicagofriends.website/">Chicago Web Friends</a>.
 </h1>
-
