--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@ Always happy to send a resume, larger/more specific portfolio, or aggressive pod
   {% if site.ajaxify_contact_form %}
     <form class="form-stacked">
       <input type="text" name="email" class="field-light" placeholder="Email Address">
-      <textarea type="text" name="content" class="field-light" rows="5" placeholder="emojis accepted"></textarea>
+      <textarea type="text" name="content" class="field-light" rows="5" placeholder="Say hey."></textarea>
       <input type="hidden" name="_subject" value="New submission!" />
       <input type="text" name="_gotcha" style="display:none" />
       <button type='submit' class="button button-blue button-big mobile-block">*woosh*</button>
@@ -17,11 +17,11 @@ Always happy to send a resume, larger/more specific portfolio, or aggressive pod
   {% else %}
     <form action="https://formspree.io/allysonkatew@gmail.com" method="POST" class="form-stacked">
       <input type="text" name="email" class="field-light" placeholder="Email Address">
-      <textarea type="text" name="content" class="field-light" rows="5" placeholder="emojis accepted"></textarea>
+      <textarea type="text" name="content" class="field-light" rows="5" placeholder="Say hey."></textarea>
       <input type="hidden" name="_next" value="{{ site.baseurl }}/thanks/" />
       <input type="hidden" name="_subject" value="New submission!" />
       <input type="text" name="_gotcha" style="display:none" />
-      <input type="submit" class="button button-blue button-big mobile-block" value="*woosh*">
+      <input type="submit" class="button button-blue button-big mobile-block" value="Make It Go">
     </form>
   {% endif %}
 </div>
