--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@ layout: page
 title: Say Hello
 permalink: /contact/
 ---
-Always happy to send a resume, specific in-depth campaigns, or book recommendations.
+Always happy to send a resume, specific in-depth campaigns, or book recs.
 
 <div class="py2">
   {% if site.ajaxify_contact_form %}
