--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@ layout: default
 ---
 
 <h2 class="h2">
-Hi, I'm Allyson, a creative strategist, brand. marketing & web designer based in Chicago. I'm most easily reached via <a href="mailto:allysonkatew@gmail.com">electronic mail</a>.
+Hi, I'm Allyson. I'm a creative strategist and brand, marketing & web designer based in Chicago. I'm most easily reached via <a href="mailto:allysonkatew@gmail.com">electronic mail</a>.
 </h2>
