final commit before bed

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@ layout: page
 title: Say Hello
 permalink: /contact/
 ---
-Always happy to send a resume, specific in-depth campaigns, or aggressive compliment.
+Always happy to send a resume, specific in-depth campaigns, or grab coffee.
 
 <div class="py2">
   {% if site.ajaxify_contact_form %}
@@ -21,7 +21,7 @@ Always happy to send a resume, specific in-depth campaigns, or aggressive compli
       <input type="hidden" name="_next" value="{{ site.baseurl }}/thanks/" />
       <input type="hidden" name="_subject" value="New submission!" />
       <input type="text" name="_gotcha" style="display:none" />
-      <input type="submit" class="button button-blue button-big mobile-block" value="Make It Go">
+      <input type="submit" class="button button-blue button-big mobile-block" value="Submit">
     </form>
   {% endif %}
 </div>
