--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@ layout: default
 ---
 
 <h2 class="h2">
-Hi, I'm Allyson. I'm a creative strategist and brand, marketing & web designer based in Chicago. Want to work together? I'm most easily reached via <a href="mailto:allysonkatew@gmail.com">electronic mail</a>.
+Hi, I'm Allyson. I'm a creative strategist and brand, marketing & web designer based in Chicago. Currently taking work and offering mentorship. Want to get in touch? I'm most easily reached via <a href="mailto:allysonkatew@gmail.com">email</a>.
 </h2>
